# DIP-final-WebShowShow

./: .gitignore  CLAUDE.md  README.md  desktop-setup.md  package-lock.json  package.json
src/: BWAndFiltersEffect.js  DocumentScannerSection.js  HistogramEnhancementSection.js  ImHist.js  SharpnessEffect.js  SmoothingEffect.js  TextCorrectionEffect.js  WhiteningEffect.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
